# porygon

./: README.md  compose.yaml
.github/workflows/: celebi-lint.yml  chimecho-lint.yml  espeon-lint.yml  sealeo-lint.yml
celebi/: .gitignore  README.md  Taskfile.yaml  config.yaml  main.py  pylintrc  pyproject.toml
celebi/celebi/blueprints/: __init__.py
celebi/celebi/blueprints/root/: api.py
celebi/celebi/blueprints/twine/: api.py  helper.py
celebi/celebi/blueprints/twine/structs/: __init__.py  llm_prompt.py  player_response.py  prompt.py  prompt_response_pair.py  score.py
celebi/celebi/blueprints/wildcat/: api.py
celebi/celebi/core/exceptions/: __init__.py
celebi/celebi/core/flask/: config.py  factory.py
celebi/celebi/core/util/: __init__.py  requests.py  responses.py
celebi/celebi/exceptions/: __init__.py
celebi/celebi/flask/: blueprints.py  config.py  factory.py
celebi/celebi/util/: responses.py
celebi/docker/: DevDockerfile  ProdDockerfile
chimecho/: .gitignore  README.md  Taskfile.yaml  config.yaml  main.py  pyproject.toml  styles.css
chimecho/chimecho/: cli.py  config.py  render.py  scheduler.py
chimecho/chimecho/core/: cli.py  config.py  render.py  scheduler.py
chimecho/chimecho/core/exceptions/: __init__.py
chimecho/chimecho/exceptions/: cli_value_error.py  config_value_error.py
espeon/: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml
espeon/espeon/: common.py  util.py
espeon/espeon/commands/: __init__.py  command.py  commands.py
espeon/espeon/stage/: __init__.py  esp300_translation_stage.py
meloetta/: .gitignore  README.md  Taskfile.yml  dune-project  meloetta.opam
meloetta/lib/: compile.ml  dune  io.ml  ir.ml  irdisplay.ml  irout.ml  irtypes.ml  llmparse.ml
meloetta/lib/cli/: dune
meloetta/lib/common/: dune
meloetta/lib/hooks/: dune
meloetta/lib/io/: dune  read_files.ml
meloetta/lib/ir/: dune
meloetta/lib/llm/: dune
meloetta/lib/mdgen/: dune  flatten_inline.ml  parse.ml  print.ml
meloetta/lib/reactgen/: dune  hello.ml
meloetta/sample_data/: file1.md
meloetta/sample_data/subset/: file2.md
meloetta/test/: dune
mesprit/: README.md  Taskfile.yaml  main.py  popes.csv  popes_data.csv  pyproject.toml
mesprit/mesprit/: config.py  consensus.py  engine.py
sealeo/: CMakeLists.txt  README.md  Taskfile.yml
sealeo/src/: main.cc
sealeo/src/include/: common.h  globals.h
sealeo/src/include/channel/: channel.h
sealeo/src/include/logger/: logger.h  string_format.h
sealeo/src/include/something/: test.h
sealeo/src/logger/: logger.cc  string_format.cc
sealeo/src/something/: test.cc
sunflora/: README.md  bun.lockb  index.html  package.json  vite.config.ts
sunflora/src/: App.css  App.tsx  index.css  main.tsx
sunflora/src/components/: AnimatePage.tsx  Game.css  TheGame.tsx  pages.tsx
