[tool.poetry]
name = "chimecho"
version = "1.0"
description = "Parse Obsidian schedule templates into a weekly calendar. The core of this was entirely by prompting o3-mini, and changes were made manually."
authors = ["Andrew Li <andrewli@u.northwestern.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyyaml = "^6.0.1"
selenium = "^4.29.0"
pyinstaller = "^6.12.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
black = "^24.4.2"
mypy = "^1.15.0"
ruff = "^0.9.7"
types-pyyaml = "^6.0.12.20241230"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
