(lang dune 3.18)

(name meloetta)

(generate_opam_files true)

(source
 (github andrlime/porygon))

(authors "Andrew Li <andrewli@u.northwestern.edu>")

(maintainers  "Andrew Li <andrewli@u.northwestern.edu>")

(license MIT)

(package
 (name meloetta)
 (synopsis "Compiler from MD files with LLM prompts into React frontend text-based game")
 (description "Compiles a folder of markdown files with injected LLM prompting to generate text-based games that support complicated programming ideas while being easy for non-technical people to learn")
 (depends ocaml))
